--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,9 +1,10 @@
 % Index file for Songbook.pdf
-% Automatically generated at Mon Oct  2 09:11:50 CEST 2023 by link-doc
+% Automatically generated at Sat Mar  2 10:14:29 CET 2024 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
 \input{songs/1_Signální}
+\input{songs/21_Guns}
 \input{songs/Accidentally_In_Love}
 \input{songs/Africa}
 \input{songs/Amerika}
@@ -183,6 +184,7 @@
 \input{songs/ŽŽ_HonzikSongs/Sweater_Weather}
 \input{songs/ŽŽ_HonzikSongs/The_Islander}
 \input{songs/ŽŽ_HonzikSongs/The_Middle}
+\input{songs/ŽŽ_HonzikSongs/We_Didnt_Start_The_Fire}
 \input{songs/ŽŽ_KikiSongs/AA_intro}
 \input{songs/ŽŽ_KikiSongs/Shallow}
 \input{songs/ŽŽ_LuckaSongs/AA_intro}
@@ -198,16 +200,20 @@
 \input{songs/ŽŽ_YbokemSongs/Co_Když}
 \input{songs/ŽŽ_YbokemSongs/Dont_Go_Breaking_My_Heart}
 \input{songs/ŽŽ_YbokemSongs/Im_Yours}
+\input{songs/ŽŽ_YbokemSongs/Islands_In_The_Stream}
 \input{songs/ŽŽ_YbokemSongs/Jdevozem}
 \input{songs/ŽŽ_YbokemSongs/Když_Nemůžeš_Tak_Přidej}
 \input{songs/ŽŽ_YbokemSongs/Krátke_Lásky}
 \input{songs/ŽŽ_YbokemSongs/Moonlight_Shadow}
+\input{songs/ŽŽ_YbokemSongs/Needles_And_Pins}
 \input{songs/ŽŽ_YbokemSongs/Not_Fair}
 \input{songs/ŽŽ_YbokemSongs/On_Top_Of_The_World}
 \input{songs/ŽŽ_YbokemSongs/One_Of_Us}
 \input{songs/ŽŽ_YbokemSongs/Perfect}
+\input{songs/ŽŽ_YbokemSongs/Photograph}
 \input{songs/ŽŽ_YbokemSongs/Ptáčata}
 \input{songs/ŽŽ_YbokemSongs/Runaway_Train}
+\input{songs/ŽŽ_YbokemSongs/Shiny_Happy_People}
 \input{songs/ŽŽ_YbokemSongs/Slzy_Tvý_Mámy}
 \input{songs/ŽŽ_YbokemSongs/Stitches}
 \input{songs/ŽŽ_YbokemSongs/Sweet_Home_Alabama}
