--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Sat Mar  2 10:14:29 CET 2024 by link-doc
+% Automatically generated at Mon Mar 11 19:13:22 CET 2024 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -84,6 +84,7 @@
 \input{songs/Living_Next_Door_To_Alice}
 \input{songs/Láska_Na_Vsi}
 \input{songs/Lásko_Má_Já_Stůňu}
+\input{songs/Láskopad}
 \input{songs/Magdálena}
 \input{songs/Malování}
 \input{songs/Malá_Dáma}
@@ -122,6 +123,7 @@
 \input{songs/Radioactive}
 \input{songs/Ring-O-Ding}
 \input{songs/Riptide}
+\input{songs/Rocket_Man}
 \input{songs/Ráda_Se_Miluje}
 \input{songs/Sametová}
 \input{songs/Sbohem_Galánečko}
@@ -135,6 +137,7 @@
 \input{songs/Svaz_Českých_Bohémů}
 \input{songs/Sáro}
 \input{songs/Taky_Jsem_Se_Narodil_Bos}
+\input{songs/The_Gambler}
 \input{songs/This_Is_The_Life}
 \input{songs/Touha}
 \input{songs/Toulavej}
@@ -142,6 +145,7 @@
 \input{songs/Tři_Kříže}
 \input{songs/Ulica}
 \input{songs/Umbrella}
+\input{songs/Under_The_Bridge}
 \input{songs/Untitled}
 \input{songs/V_7_25}
 \input{songs/V_Blbým_Věku}
