--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Mon Mar 11 19:13:22 CET 2024 by link-doc
+% Automatically generated at Fri Mar 22 21:19:07 CET 2024 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -159,6 +159,7 @@
 \input{songs/When_All_Is_Said_And_Done}
 \input{songs/With_Or_Without_You}
 \input{songs/Wonderwall}
+\input{songs/You_Cant_Hurry_Love}
 \input{songs/Zalůbení}
 \input{songs/Zanedbaný_Sex}
 \input{songs/Zejtra_Mám}
@@ -211,6 +212,7 @@
 \input{songs/ŽŽ_YbokemSongs/Moonlight_Shadow}
 \input{songs/ŽŽ_YbokemSongs/Needles_And_Pins}
 \input{songs/ŽŽ_YbokemSongs/Not_Fair}
+\input{songs/ŽŽ_YbokemSongs/Něco_O_Lásce}
 \input{songs/ŽŽ_YbokemSongs/On_Top_Of_The_World}
 \input{songs/ŽŽ_YbokemSongs/One_Of_Us}
 \input{songs/ŽŽ_YbokemSongs/Perfect}
@@ -221,6 +223,7 @@
 \input{songs/ŽŽ_YbokemSongs/Slzy_Tvý_Mámy}
 \input{songs/ŽŽ_YbokemSongs/Stitches}
 \input{songs/ŽŽ_YbokemSongs/Sweet_Home_Alabama}
+\input{songs/ŽŽ_YbokemSongs/Take_On_Me}
 \input{songs/ŽŽ_YbokemSongs/Thinking_Out_Loud}
 \input{songs/ŽŽ_YbokemSongs/Voda_Živá}
 \input{songs/ŽŽ_YbokemSongs/Vymlácený_Entry}
