--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Fri Mar 22 21:19:07 CET 2024 by link-doc
+% Automatically generated at Sat Mar 23 21:18:01 CET 2024 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -12,6 +12,7 @@
 \input{songs/Ani_K_Stáru}
 \input{songs/Až_Mi_Bude_Pětašedesát}
 \input{songs/Bad_Bad_Leroy_Brown}
+\input{songs/Bad_Day}
 \input{songs/Baroko}
 \input{songs/Batalion}
 \input{songs/Behind_Blue_Eyes}
@@ -42,6 +43,7 @@
 \input{songs/Fairytale_Gone_Bad}
 \input{songs/Falling_Slowly}
 \input{songs/Flowers}
+\input{songs/Fox_On_The_Run}
 \input{songs/Get_Lucky}
 \input{songs/Good_Riddance_Time_Of_Your_Life}
 \input{songs/Grónská_písnička}
@@ -60,6 +62,7 @@
 \input{songs/Hruška}
 \input{songs/Hvězda_Na_Vrbě}
 \input{songs/Hvězdář}
+\input{songs/I_Dont_Want_To_Miss_A_Thing}
 \input{songs/Im_A_Believer}
 \input{songs/Jarní_Tání}
 \input{songs/Jasná_Zpráva}
@@ -136,6 +139,7 @@
 \input{songs/Starý_Muž}
 \input{songs/Svaz_Českých_Bohémů}
 \input{songs/Sáro}
+\input{songs/Tabáček}
 \input{songs/Taky_Jsem_Se_Narodil_Bos}
 \input{songs/The_Gambler}
 \input{songs/This_Is_The_Life}
@@ -147,6 +151,7 @@
 \input{songs/Umbrella}
 \input{songs/Under_The_Bridge}
 \input{songs/Untitled}
+\input{songs/Uptown_Girl}
 \input{songs/V_7_25}
 \input{songs/V_Blbým_Věku}
 \input{songs/V_Lese}
@@ -154,9 +159,11 @@
 \input{songs/Variace_Na_Renesanční_Téma}
 \input{songs/Veď_mě_dál,_cesto_má}
 \input{songs/Viva_La_Vida}
+\input{songs/Vymlácený_Entry}
 \input{songs/Vymyslená}
 \input{songs/Včelín}
 \input{songs/When_All_Is_Said_And_Done}
+\input{songs/Wherever_You_Will_Go}
 \input{songs/With_Or_Without_You}
 \input{songs/Wonderwall}
 \input{songs/You_Cant_Hurry_Love}
@@ -182,13 +189,17 @@
 \input{songs/ŽŽ_DomcaSongs/The_Weight}
 \input{songs/ŽŽ_DomcaSongs/Waiting_On_The_World_To_Change}
 \input{songs/ŽŽ_HonzikSongs/AA_intro}
+\input{songs/ŽŽ_HonzikSongs/Dream_On}
+\input{songs/ŽŽ_HonzikSongs/High_Hopes}
 \input{songs/ŽŽ_HonzikSongs/House_Of_Memories}
 \input{songs/ŽŽ_HonzikSongs/Love_Again}
 \input{songs/ŽŽ_HonzikSongs/Matfyzák_Na_Discu}
 \input{songs/ŽŽ_HonzikSongs/Pompeii}
+\input{songs/ŽŽ_HonzikSongs/Somebody_Told_Me}
 \input{songs/ŽŽ_HonzikSongs/Sweater_Weather}
 \input{songs/ŽŽ_HonzikSongs/The_Islander}
 \input{songs/ŽŽ_HonzikSongs/The_Middle}
+\input{songs/ŽŽ_HonzikSongs/Wake_Me_Up_When_September_Ends}
 \input{songs/ŽŽ_HonzikSongs/We_Didnt_Start_The_Fire}
 \input{songs/ŽŽ_KikiSongs/AA_intro}
 \input{songs/ŽŽ_KikiSongs/Shallow}
@@ -204,6 +215,7 @@
 \input{songs/ŽŽ_YbokemSongs/Cesta_Z_Města}
 \input{songs/ŽŽ_YbokemSongs/Co_Když}
 \input{songs/ŽŽ_YbokemSongs/Dont_Go_Breaking_My_Heart}
+\input{songs/ŽŽ_YbokemSongs/Dont_Stop_Me_Now}
 \input{songs/ŽŽ_YbokemSongs/Im_Yours}
 \input{songs/ŽŽ_YbokemSongs/Islands_In_The_Stream}
 \input{songs/ŽŽ_YbokemSongs/Jdevozem}
@@ -226,7 +238,6 @@
 \input{songs/ŽŽ_YbokemSongs/Take_On_Me}
 \input{songs/ŽŽ_YbokemSongs/Thinking_Out_Loud}
 \input{songs/ŽŽ_YbokemSongs/Voda_Živá}
-\input{songs/ŽŽ_YbokemSongs/Vymlácený_Entry}
 \input{songs/ŽŽ_YbokemSongs/Waterloo}
 \input{songs/ŽŽ_YbokemSongs/When_Youre_Gone}
 \input{songs/ŽŽ_YbokemSongs/Wild_World}
