--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Sat Mar 23 21:18:01 CET 2024 by link-doc
+% Automatically generated at Thu Apr 18 09:21:02 CEST 2024 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
